--- a/complete.html
+++ b/complete.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- 576px以上の画面幅のとき、メニューを表示する（それ未満なら折りたたむ）指定を追加 -->
-          <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container-fluid">
                 <!-- 画面左上に表示するサイト名のリンクとして適切な表示をするための指定を追加 -->
                 <a href="#" class="navbar-brand">サンプル株式会社</a>
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a href="#" class="nav-link">ニュース</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">採用情報</a></li>
                         <!-- お問い合わせページを表示していることをわかりやすくする設定を追加 -->
-                        <li class="nav-item"><a href="#" class="nav-link active">お問い合わせ</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">お問い合わせ</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +40,7 @@
         <p>3営業日以内をめどにご返信いたしますので、しばらくお待ちください。</p>
         <div class="text-center mb-4">
             <!-- 「戻る」ボタンを緑色にする設定を追加 -->
-            <a href="contact.html" class="btn btn-success  mb-3">戻る</a>
+            <a href="contact.html" class="btn btn-success">戻る</a>
         </div>
     </div>
     <footer class="text-center pt-3 border-top">
