--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- 576px以上の画面幅のとき、メニューを表示する（それ未満なら折りたたむ）指定を追加 -->
-          <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container-fluid">
                 <!-- 画面左上に表示するサイト名のリンクとして適切な表示をするための指定を追加 -->
                 <a href="#" class="navbar-brand">サンプル株式会社</a>
@@ -38,11 +38,11 @@
         <h1 class="mt-4 pb-4 border-bottom">お問い合わせ</h1>
 
         <!-- グリッドを使うための指定を追加 -->
-        <div class="mb-3 row">
+        <div class="mt-4 row">
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- 電話に関するBootstrap Iconsのアイコンを「お電話：」の左に追加 -->
-                <img class="justify-content-between" src="icons/telephone-fill.svg" alt="電話アイコン"> <strong>お電話：</strong>
+                <img class="mb-1" src="icons/telephone-fill.svg" alt="電話アイコン"> <strong>お電話：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -50,7 +50,7 @@
                 <p>該当する内容の電話番号におかけください。</p>
                 <!-- テーブルの装飾を適用する指定を追加 -->
                 <!-- さらにテーブルへ枠を追加する指定、行ごとの背景色が交互に変わる指定を追加 -->
-                <table class="table table-striped table-bordered">
+                <table class="mt-4 table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th>内容</th>
@@ -82,7 +82,7 @@
                     <!-- カードのタイトル部分として設定 -->
                     <div class="card-header">
                         <!-- 営業時間の情報に関するBootstrap Iconsのアイコンを「営業時間」の左に追加 -->
-                        <img class="justify-content-between" src="icons/exclamation-circle-fill.svg" alt="営業時間のアイコン"> 営業時間
+                        <img class="mb-1" src="icons/exclamation-circle-fill.svg" alt="営業時間のアイコン"> 営業時間
                     </div>
 
                     <!-- カードの本文部分として設定 -->
@@ -94,11 +94,11 @@
         </div>
 
         <!-- グリッドを使うための指定を追加 -->
-        <div class="mb-3 row">
+        <div class="mt-4 row">
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- メールに関するBootstrap Iconsのアイコンを「メール：」の左に追加 -->
-                <img class="justify-content-between" src="icons/envelope.svg" alt="メールのアイコン"> <strong>メール：</strong>
+                <img class="mb-1" src="icons/envelope.svg" alt="メールのアイコン"> <strong>メール：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -140,7 +140,7 @@
                             <input type="text" class="form-control" name="mail">
                         </div>
                     </div>
-
+                    
                     <!-- ラベルとフォーム部品を並べるためにグリッドを使う指定を追加 -->
                     <div class="mb-3 row">
                         <!-- 576px以上の画面幅のとき、ラベルは3つ分のカラム幅で表示する指定を追加 -->
